src/less/post-page.less
/* ... */
div.shadow {
   position: relative;
   z-index: -1;
   height: 7px;
}

div.caption {
   margin-top: 0;
   line-height: 1.3em;
   padding: 4px 0 0;
   font-size: @fontSize;

   sup {
      color: @footnoteColor;
      vertical-align: top;
      line-height: 1em;
      font-family: @sanSerifFont;
      font-size: 18px;
      cursor: help;
   }

   .tab { display: inline-block; width: 2em; }

   blockquote {
      font-size: @fontSize - 1;
      background-image: url(/img/left-quote.png);
      background-repeat: no-repeat;
      background-position: left top;
      margin: 1em 1em 0;
      text-align: justify;

      p {
         padding: 0 4em 0.5em;
         //text-indent: 0;
         line-height: 1.1em;
         color: #444;
      }

      // poems inline with other caption text
      &.poem {
         background-image: url(/img/quote-ornament.png);
         background-position: left bottom;
         font-family: @serifFont;
         line-height: 1.4em;
         text-align: left;
         margin-top: 1.5em;

         p {
            text-align: left;
            text-indent: 0;
            padding: 0 0 1.4em 5em;
         }
      }
   }

   p {
      text-indent: 2em;
      font-family: @serifFont;
      margin: 0;
      padding: 0 2em 0.3em;

      &:first-child, &.first {
         text-indent: 0;
         padding-top: 1.4em;
      }
      &:last-child { padding-bottom: 2em; }
      &.first { padding-top: 0.4em; }
      &.quip {
         &:first-child, &.first { text-indent: 2em; }
      }

      &.note {
         text-indent: 0;
         text-align: center;
         background-color: #fff;
         font-size: small;
         border: 1px solid #bfc1bf;
         margin: 0 4em;
         padding: 1em;
      }

      // captions that are entirely a poem
      &.poem {
         padding-left: 3em;
         line-height: 1.3em;
         //margin-bottom: 1em;
         font-size: 18px;

         .drop-cap {
            font-size: 36pt;
            padding: 0 3px 0 0;
            float: left;
            line-height: 33pt;
         }
      }

      &.haiku {
         font-style: italic;
         font-size: 22px;
         text-indent: 0;
         padding: 10px 0 15px 65px;
         line-height: 1.1em;

         .material-icons {
            display: block;
            position: absolute;
            top: 15px;
            right: 100px;
            color: @trimColor;
            font-size: 75px;
            .opacity(0.1);
         }
      }
   }

   ol.footnotes {
      list-style-type: decimal;
      position: relative;
      border-top: 1px solid @trimColor;
      background-color: darken(@lightColor, 5%);
      padding: 10px 20px 10px 40px;
      font-family: @sanSerifFont;
      font-size: 13px;
      margin-top: 20px;
      cursor: help;
      color: @footnoteColor;

      .opacity();

      &:hover {
         background: none;
         .opacity(1);
      }

      li {
         line-height: 1em;
         padding-bottom: 5px;
         counter-increment: note-counter;

         span { color: #444; }
         a:hover { color: @hoverColor; }

         &.credit {
            list-style: none;
            text-indent: -10px;
            padding-bottom: 10px;
            .material-icons {
               font-size: 14px;
               color: @footnoteColor;
               margin: 0;
               padding-right: 7px;
               vertical-align: text-top;
            }
         }
      }
   }

   // mobile caption
   @media @mobile {
      padding: 0 0 15px;
      font-size: @fontSize + 2;
      line-height: 1.3em;

      p {
         padding: 0 0.7em 0.3em;
         &:first-child, &.first { padding-top: 0; }
         &:last-child { padding-bottom: 1em; }
      }

      blockquote {
         margin-bottom: 15px;
         text-align: left;
         p {
            font-size: 17px;
            color: @mobileTextColor;
            line-height: 1.2em;
            padding: 0 3em 0.5em;
         }
      }

      sup {
         color: @mobileFootnoteColor;
      }

      ol.footnotes {
         border: none;
         background-color: #333;
         margin: 6px 0 25px;
         padding: 6px 5px 0 25px;
         color: @mobileFootnoteColor;

         li {
            padding-bottom: 8px;
            span { color: darken(@mobileTextColor, 30%); }
            &.credit {
               text-indent: -8px;
               .material-icons {
                  margin: 0;
                  padding: 2px 2px 0 0;
               }
            }
         }

         .opacity(1);

         a { color: @mobileLinkColor; }
      }
   }

   @media @tablet {
      font-size: @fontSize + 3;
      p {
         padding: 0 1.5em 1em 2em;
      }
   }
}

.footer-tags {
   margin: 0 auto;

   nav.tag-wrapper {
      .drop-shadow(0, 0, 7px, 0.6);
   }

   @media @mobile {
      margin: 0;
      nav.tag-wrapper { .box-shadow(none); }
   }
}

div.by-line {
   position: relative;
   text-align: right;
   font-family: @serifFont;
   font-size: 25px;
   font-style: italic;
   font-weight: normal;
   color: @boldColor;
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);

   p { padding: 25px 25px 20px 0; }

   @media @mobile {
      p { margin-top: 40px; }
      text-align: center;
      color: @mobileTextColor;
   }
}

